--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Invisible Runner</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
+
 <body>
+    <button class="button1" onclick="claimNft()">Claim NFT</button>
+    <button class="button1" onclick="claimNTokens()">Claim Tokens</button>
+    <button class="button1" onclick="connectmetamask()">Claim NFT</button>
     
+    <!-- Total score is the total nft's you've collected and what you can claim using the Claim NFT button -->
+    <span class="nftTotalScore" data-nft-total-score> NFT Total Score: 0</span>
+    <span class="gweiTotalScore" data-gwei-total-score> GWEI Total Score: 0</span>
+
+    <!-- Current total NFT and GWEI scores-->
+    <span class="score1" data-nft-score> NFT Score: 0 </span>
+    <div class="score" data-gwei-score> GWEI Score: 0</span>
+    <div class="game" data-game></div>
+    <div class="startgame" data-start-screen>Press Any Key To Start</div>
 </body>
 </html>
